# neolang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run-test.sh
Interpreter/: Interpret.cpp  Interpret.h
Modules/: BaseIO.cpp  BaseIO.h  StringModule.cpp  StringModule.h
Objects/: ModuleBuffer.cpp  ModuleBuffer.h  ObjFrwd.h  ObjMethod.cpp  ObjMethod.h  ObjMethodBase.h  ObjModule.cpp  ObjModule.h  ObjModuleBase.cpp  ObjModuleBase.h  ObjNativeMethod.cpp  ObjNativeMethod.h  ObjNativeModule.h  ObjString.h  ObjStringLiteral.h  Object.cpp  Object.h  SymbolTable.h
Parser/: Parser.cpp  Parser.h  Reader.cpp  Reader.h  main.cpp
Vm/: ApiStack.h  Common.h  Context.cpp  Context.h  Frame.cpp  Frame.h  Instruction.h  OpCode.h  Type.h  TypeCheck.h  Value.h  Vm.cpp  Vm.h
funtest/: AddFloat.nl  AddInt.nl  CMPTest.nl  ConcatString.nl  Fibonacci.nl  GotoTest.nl  IFTest.nl  Point.nl  PrintString.nl  ifElseTest.nl  ifElseTest1.nl
scripts/: mkhead.sh
src/: CMakeLists.txt  main.cpp
src/IRGeneration/: AbstractVisitor.hpp
src/Interpreter/: BaselineInterpreter.cpp  BaselineInterpreter.h  Interpret.cpp  Interpret.h  Interpreter.h
src/Modules/: BaseIO.cpp  BaseIO.h  StringModule.cpp  StringModule.h
src/Objects/: ModuleBuffer.cpp  ModuleBuffer.h  ObjFrwd.h  ObjMethod.cpp  ObjMethod.h  ObjMethodBase.h  ObjModule.h  ObjModuleBase.cpp  ObjModuleBase.h  ObjNativeMethod.cpp  ObjNativeMethod.h  ObjNativeModule.h  ObjString.cpp  ObjString.h  Object.h  StringBuffer.cpp  StringBuffer.h  SymbolTable.h
src/Objects/Method/: ObjMethod.cpp  ObjMethod.h  ObjMethodBase.h  ObjNativeMethod.cpp  ObjNativeMethod.h
src/Objects/Module/: ModuleBuffer.cpp  ModuleBuffer.h  ObjField.h  ObjModule.h  ObjModuleBase.cpp  ObjModuleBase.h  ObjNativeModule.h
src/Parser/: Keywords.h  Lexer.cpp  Lexer.h  NewParser.cpp  NewParser.h  ParseStrategy.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  VisitorImpl.cpp  VisitorImpl.h
src/Parser/grammar/: Grammar.g4
src/Vm/: ApiStack.h  Buffer.h  CallStack.cpp  CallStack.h  Common.h  Environment.h  Frame.cpp  Frame.h  Instance.h  Instruction.cpp  Instruction.h  Locals.h  OpCode.h  Type.h  Value.cpp  Value.h  Vm.cpp  Vm.h  VmDump.cpp  VmDump.h  VmUtils.h  eternal.h
src/Vm/Allocator/: Allocator.cpp  Allocator.h  Collector.cpp  Collector.h  DefaultAllocator.cpp  DefaultAllocator.h  RootSet.cpp  RootSet.h
src/unittests/: testBuffer.cpp  testLexer.cpp
